# Habit-Tracker

./: .gitignore  README.md  manage.py  pyproject.toml
habit_tracker/habit_tracker/: settings.py  urls.py
server/: api.py  urls.py  wsgi.py
server/apps/authentication/: api.py  apps.py  serializer.py  validators.py  views.py
server/apps/core/: serializers.py
server/apps/habit_tracker/: admin.py  api.py  apps.py  enums.py  models.py  serializers.py  validators.py  views.py
server/apps/habit_tracker/migrations/: 0001_initial.py  0002_data_migration__habit_units.py
server/settings/: base.py  develop.py  production.py  test.py
tests/: factories.py
tests/unit/: conftest.py
tests/unit.py/apps/habit_tracker/: test_models.py  test_views.py
tests/unit/apps/habit_tracker/: test_views.py
