[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["Olena Gut <lena.gut1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
fernet = "^1.0.1"
cryptography = "^42.0.5"
drf-spectacular = "^0.27.1"
faker = "^24.3.0"
factory-boy = "^3.3.0"
pytest = "^8.1.1"
pytest-factoryboy = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
